<resources>
    <string name="app_name">日历Mini</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="nothing">这一天并没有添加任何的事件…</string>
    <string name="is_today">今日事,今日毕</string>
    <string name="zodiac">生肖</string>
    <string name="more_event">更多事件</string>
    <string name="no_market">您的系统中没有安装应用市场</string>
    <string name="today_things">今日事,今日毕</string>
    <string name="day">天</string>
    <string name="till_xx_days_ago">距今还有%4d天</string>
    <string name="it_has_been_xx_days">距今已过%4d天</string>
    <string name="xx_later">%d天之后</string>
    <string name="xx_before">%d天之前</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="do_not_delete">不删除</string>
    <string name="setting">设置</string>
    <string name="current_lunar_size">农历字体大小，当前为：%d</string>
    <string name="current_week_size">星期字体大小，当前为：%d</string>
    <string name="current_number_size">日期数字字体大小，当前为：%d</string>
    <string name="current_holiday_size">假日字体大小，当前为：%d</string>
    <string name="current_day_size">日期背景大小，当前为：%d</string>
    <string name="current_dpi">DPI，当前为：%d</string>
    <string name="birthday">生日</string>
    <string name="xx_year">%s年</string>
    <string name="xx_year_xx_month">%d年%02d月</string>
    <string name="do_not_save">不保存</string>
    <string name="whether_to_save">是否保存当前内容？</string>
    <string name="xx_year_xx_month_xx">%d年%d月%d日</string>
    <string name="white_widget">白色小部件</string>
    <string name="transparent_widget">透明小部件</string>
    <string name="load_wall_pager">加载壁纸</string>
    <string name="confirm_delete">是否删除该事件？</string>
    <string name="long_press_edit">长按编辑</string>
    <string name="custom_symbol_comment">自定义符号备注</string>
    <string name="thing">事件</string>
    <string name="memorial_day">纪念日</string>
    <string name="and">和</string>
    <string name="name_separator">、</string>
    <string name="of">的</string>
    <string name="date_format">%d月%d日</string>
    <string name="monday_start">周一开始</string>
    <string name="monday_start_summary">每周从周一开始</string>
    <string name="fill_date">日期填充</string>
    <string name="fill_date_summary">将会在空白处填充临近月份的日期</string>
    <string name="enable_select_anim">启用“选择”动画</string>
    <string name="enable_select_anim_summary">点击选择日期时将启用动画（若导致不流畅可将此选项关闭）</string>
    <string name="theme">主题风格</string>
    <string name="theme_summary">选择一个你喜欢的颜色</string>
    <string name="set_symbol">符号设置</string>
    <string name="set_symbol_summary">假装可以自定义符号</string>
    <string name="custom_ui">显示调节</string>
    <string name="custom_ui_summary">可以调节界面，以使界面看起来更和谐</string>
    <string name="holiday_sync">节假日同步</string>
    <string name="holiday_sync_summary">点击即可同步节假日</string>
    <string name="normal">常规</string>
    <string name="widget">小部件</string>
    <string name="trans_widget">透明小部件</string>
    <string name="trans_widget_summary">点击编辑透明小部件</string>
    <string name="pic_for_white_widget">白色小部件图片</string>
    <string name="pic_for_white_widget_summary">可以更换白色小部件右下角图片</string>
    <string name="sync_fail_and_contact_developer">同步失败了，请联系开发者！</string>
    <string name="sync_success">同步成功！</string>
    <string name="copy_error_message">复制错误信息</string>
    <string name="message_is_copied">信息已复制</string>
    <string name="personalise">个性化</string>
    <string name="add_success">添加成功</string>
    <string name="delete_all">删除全部</string>
    <string name="wait">请稍等…</string>
    <string name="offset_of_year">距%d周年</string>
    <string name="xx_day_ago">还有%d天</string>
    <string name="has_been_xx_days">已过了%d天</string>
    <string name="xx_anniversary">%d周年</string>
    <string name="color_default">原色</string>
    <string name="color_green">酷安绿</string>
    <string name="color_pink">哔哩粉</string>
    <string name="color_teal">水鸭青</string>
    <string name="color_blue">知乎蓝</string>
    <string name="color_red">中国红</string>
    <string name="color_purple">基佬紫</string>
    <string name="color_black">高端黑</string>
    <string-array name="who">
        <item>我</item>
        <item>爸爸</item>
        <item>妈妈</item>
        <item>女票</item>
        <item>男票</item>
        <item>老公</item>
        <item>老婆</item>
        <item>儿子</item>
        <item>女儿</item>
    </string-array>
</resources>
